--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+@import url(http://fonts.googleapis.com/css?family=Montserrat:300,700);
 
 /*
 Theme Name: velvet
