--- a/style.css
+++ b/style.css
@@ -805,6 +805,43 @@ object {
 	color: #444;
 }
 
+/*--------------------------------------------------------------
+   FRONT-PAGE
+--------------------------------------------------------------*/
+
+.image-fullscreen { 
+	width: 100%;
+	height: 100%;
+	background: url('http://i60.tinypic.com/ay252v.jpg') no-repeat 100% 100%; position: fixed; z-index: -1; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+.home-container {
+	height: 100%;
+	background: linear-gradient(to bottom right, rgba(227,5,94, 0.90), rgba(100,1,133, 0.90));
+	border: 5px solid #fff;
+}
+
+.home-navigation {
+	width: 100%;
+	height: 40px;
+}
+
+.home-brand {
+	color: #f4f4f4;
+	font-size: 35px;
+	font-family: 'Montserrat';
+	font-weight: 700;
+	padding-left: 15px;
+}
+
+/*--------------------------------------------------------------
+   END FRONT-PAGE
+--------------------------------------------------------------*/
+
 @media screen and (max-width: 900px) {
 	.logo {
 		display: none;
