--- a/style.css
+++ b/style.css
@@ -812,7 +812,7 @@ object {
 .image-fullscreen { 
 	width: 100%;
 	height: 100%;
-	background: url('http://i60.tinypic.com/ay252v.jpg') no-repeat 100% 100%; position: fixed; z-index: -1; 
+	background: url('http://localhost/WORDPRESS/wp-content/uploads/2014/06/pic-bg.jpg') no-repeat center; position: fixed; z-index: -1; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -821,7 +821,7 @@ object {
 }
 
 .home-container {
-	background: linear-gradient(to bottom right, rgba(227,5,94, 0.90), rgba(100,1,133, 0.90));
+	background: linear-gradient(to bottom right, rgba(227,5,94, 0.90), rgba(41, 36, 132, 0.90));
 	border: 8px solid #fff;
 	border-top: none;
 	font-size: 2rem;
